Overflow issue corrected

--- a/css/style.css
+++ b/css/style.css
@@ -1031,10 +1031,6 @@ main {
 }
 
 /*# sourceMappingURL=toggle-switch.css.map */
-* {
-  overflow: auto;
-}
-
 section {
   padding: 30px;
   display: block;
@@ -1392,10 +1388,10 @@ nav {
     flex-direction: row;
   }
   .socialText p {
-    font-size: 3.5em;
+    font-size: 2em;
   }
   .socialImage {
-    height: 100%;
+    height: 100px;
     width: 100px;
     background-color: #7A6FC1;
     border-radius: 50%;
@@ -1403,12 +1399,9 @@ nav {
   }
 }
 
-@media (max-width: 1200px) {
-  .socialImage {
-    display: none;
-  }
-  .socialContainer {
-    justify-content: center;
+@media (min-width: 769px) {
+  .socialText p {
+    font-size: 3.5em;
   }
 }
 
