--- a/scss/components/_sections.scss
+++ b/scss/components/_sections.scss
@@ -2,11 +2,6 @@
 //              Sections              //
 //====================================//
 
-* {
-    overflow: auto;
-}
-
-
 // main {
 //     max-width: $max-width;
 // }
@@ -410,11 +405,11 @@ nav{
     }
 
     .socialText p{
-        font-size: 3.5em;
+        font-size: 2em;
     }
 
     .socialImage {
-        height: 100%;
+        height: 100px;
         width: 100px;
         background-color: $color-primary;
         border-radius: 50%;
@@ -422,13 +417,9 @@ nav{
     }
 }
 
-@media (max-width: 1200px) {
-    .socialImage {
-        display: none;
-    }
-
-    .socialContainer{
-        justify-content: center;
+@media (min-width: 769px) {
+    .socialText p{
+        font-size: 3.5em;
     }
 }
 
